<resources>
    <string name="app_name">Librería</string>
    <string name="inicia_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="aceptar">Aceptar</string>
    <string name="imagenizq" />
    <string name="generar_contra">Generar contraseña</string>
    <string name="introduce_el_email">Introduce el email</string>
    <string name="imagenprincipal"></string>
    <string name="registro">Registro</string>
    <string name="introduce_la_contra">Introduce la contraseña</string>
    <string name="tu_contra_es">Tu contraseña es:</string>
    <string name="registrarse_como_administrador">Registro como administrador</string>
    <string name="registrarse_como_profesor">Registro como profesor</string>
    <string name="registrarse_como_alumno">Registro como alumno</string>
    <string name="confirmar_registro">Confirmar Registro</string>
    <string name="requisitos_contrasenia">La contraseña debe tener entre 8 y 16 caracteres, contener al menos una mayúscula, una minúscula, un número y un caracter especial.</string>
    <string name="crear_colegio">Crear colegio</string>
    <string name="modificar_colegio">Modificar colegio</string>
    <string name="introduce_el_id">Introduce el ID</string>
    <string name="introduce_el_c_digo">Introduce el código</string>
    <string name="a_adir_aula">Añadir aula</string>
    <string name="buscar_colegio">Buscar colegio</string>
    <string name="eliminar_aula">Eliminar aula</string>
    <string name="modificar_profesor">Modificar profesor</string>
    <string name="eliminar_profesor">Eliminar profesor</string>
    <string name="a_adir_profesor">Añadir profesor</string>
    <string name="introduce_id_aula">Introduce Id Aula</string>

    <string name="introduce_el_nuevo_aula">Introduce el nuevo aula</string>
    <string name="selecciona_el_id_del_profesor">Selecciona el ID del profesor</string>
    <string name="selecciona_el_id_del_aula">Selecciona el Id del Aula</string>
    <string name="introduce_el_id_del_colegio">Introduce el ID del colegio</string>
    <string name="introduce_tu_ID">Introduce tu ID</string>
    <string name="tu_colegio_es">Tu colegio es:</string>
    <string name="registrar_aula">Registrar aula</string>
    <string name="registrar_profesor">Registrar profesor</string>
    <string name="introduce_tu_contrasenia">Introduce tu contraseña</string>
    <string name="title_activity_principal_profesor">PrincipalProfesor</string>
    <string name="title_home">Inicio</string>
    <string name="title_libreria">Librería</string>
    <string name="title_alumnos">Alumnos</string>
    <string name="seleccion_el_id_de_tu_colegio">Seleccion el Id de tu colegio</string>
    <string name="titulo">TITULO</string>
    <string name="fecha_de_pr_stamo">FECHA DE PRÉSTAMO</string>
    <string name="fecha_de_entrega">FECHA DE ENTREGA</string>
    <string name="introduce_id_de_profesor">Introduce ID de profesor</string>
    <string name="prestamos">Préstamos</string>
    <string name="anadir_manualmente">Añadir Manualmente</string>
    <string name="anadir_mediante_google">Añadir Mediante Google</string>
    <string name="selecciona_el_alumno">Selecciona el Alumno</string>
    <string name="selecciona_el_libro">Selecciona el libro</string>
    <string name="selecciona_la_fecha_de_entrega">Selecciona la fecha de entrega</string>
    <string name="imglibro">imgLibro</string>
    <string name="introduce_id_alumno">Introduce ID Alumno</string>
    <string name="introduce_email_alumno">Introduce Email Alumno</string>
    <string name="introduce_nombre_alumno">Introduce Nombre Alumno</string>
    <string name="no_ha_dado_resultados">No ha dado resultado</string>
    <string name="introduce_el_isbn_para_buscar_el_libro">Introduce el ISBN para buscar el libro</string>
    <string name="introduce_las_iniciales_del_alumno">Introduce las iniciales del alumno</string>
    <string name="selecciona_el_id_del_alumno">Selecciona el ID del alumno</string>
    <string name="pulsa_aqu_para_leer_el_codigo_de_barras">Pulsa aquí para leer el código de barras</string>
    <string name="o">o</string>
    <string name="introduce_el_isbn">Introduce el ISBN *</string>
    <string name="introduce_el_titulo_del_libro">Introduce el título del libro *</string>
    <string name="introduce_el_autor">Introduce el autor *</string>
    <string name="introduce_la_editorial">Introduce la editorial</string>
    <string name="introduce_una_breve_sinopsis">Introduce una breve sinopsis</string>
    <string name="introduce_el_ano_de_publicacion">Introduce el año de publicación</string>
    <string name="title_activity_principal_alumno">PrincipalAlumno</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="valoracion">Valoración</string>
    <string name="reiniciar_curso">Reiniciar curso</string>
    <string name="puntuacion_del_alumnado">Puntuación del alumnado</string>
    <string name="enviar">Enviar</string>
    <string name="estrellas">estrellas</string>

</resources>
