<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.frutosajniahperez.libreria.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_libreria"
        android:name="com.frutosajniahperez.libreria.ui.libreria.LibreriaFragment"
        android:label="@string/title_libreria"
        tools:layout="@layout/fragment_libreria" />

    <fragment
        android:id="@+id/navigation_alumnos"
        android:name="com.frutosajniahperez.libreria.ui.alumnos.AlumnosFragment"
        android:label="@string/title_alumnos"
        tools:layout="@layout/fragment_alumnos" />

</navigation>
