<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroAdministrador">

    <TextView
        android:id="@+id/label3"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="412dp"
        android:fontFamily="@font/nova_slim"
        android:text="@string/requisitos_contrasenia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/btnRegresar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imagenizq"
            app:srcCompat="@drawable/izq" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/registro"
            android:textColor="#6680d4"
            android:textSize="36sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAceptarDatos"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/forma_boton"
        android:enabled="true"
        android:text="@string/confirmar_registro"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_el_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/txtRegistroCole"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_el_id_del_colegio"
        android:inputType="textEmailAddress"
        android:maxLength="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/txtContraseniaAdmin"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/introduce_tu_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>