<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroAlumno">

    <EditText
        android:id="@+id/txtIdAulaAlumno"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:drawableStart="@drawable/ic_id_24dp"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_id_aula"
        android:maxLength="15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_weight="1"
        android:fontFamily="@font/yanone_kaffeesatz"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/registro"
        android:textColor="#6680d4"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/btnRegresar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnRegresar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/imagenizq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/izq" />

    <EditText
        android:id="@+id/txtContraseniaAlumno"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_tu_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <Button
        android:id="@+id/btnAceptarDatosAlumno"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/forma_boton"
        android:enabled="true"
        android:fontFamily="@font/yanone_kaffeesatz"
        android:text="@string/confirmar_registro"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="344dp"
        android:fontFamily="@font/nova_slim"
        android:text="@string/requisitos_contrasenia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseniaAlumno"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nova_slim"
        android:text="@string/seleccion_el_id_de_tu_colegio"
        android:textColor="#6680d4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <EditText
        android:id="@+id/txtEmailAlumno"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:drawableStart="@drawable/ic_email_color_24dp"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_el_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/txtIdAlumnoRegistro"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:drawableStart="@drawable/ic_id_24dp"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_tu_ID"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2"
        app:layout_constraintVertical_bias="0.048"
        tools:targetApi="lollipop" />

    <Spinner
        android:id="@+id/spIdColegioAlumno"
        android:layout_width="279dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

</androidx.constraintlayout.widget.ConstraintLayout>