<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroProfesor">

    <EditText
        android:id="@+id/txtContraseniaProfe"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_tu_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/btnRegresar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imagenizq"
            app:srcCompat="@drawable/izq" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/registro"
            android:textColor="#6680d4"
            android:textSize="36sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAceptarDatos"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/forma_boton"
        android:enabled="true"
        android:fontFamily="@font/yanone_kaffeesatz"
        android:text="@string/confirmar_registro"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="408dp"
        android:fontFamily="@font/nova_slim"
        android:text="@string/requisitos_contrasenia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseniaProfe" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/nova_slim"
        android:text="@string/seleccion_el_id_de_tu_colegio"
        android:textColor="#6680d4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spIdColegios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdProfeRegistro"
        app:layout_constraintVertical_bias="0.906" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_el_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/txtIdProfeRegistro"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_tu_ID"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2"
        app:layout_constraintVertical_bias="0.061"
        tools:targetApi="lollipop" />

    <Spinner
        android:id="@+id/spIdColegios"
        android:layout_width="279dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAceptarDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdProfeRegistro" />

</androidx.constraintlayout.widget.ConstraintLayout>